# mcp-solr-search

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  OAUTH_AUTO_REFRESH_TEST.md  OAUTH_TESTING.md  PLANNING.md  README.md  TASK.md  conftest.py  discover_mcp_client.py  docker-compose.yml  environment.yml  get-oauth-token.sh  pyproject.toml  requirements.uv  run_server.py  server_log.txt  setup-keycloak.sh  start_solr.sh  test-keycloak.sh  test_mcp_client.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_and_conventions.md  codebase_structure_and_architecture.md  project_purpose_and_overview.md  suggested_commands.md  task_completion_checklist.md  tech_stack_and_dependencies.md
docker/solr/: load_sample_data.py
docker/solr/configsets/documents/conf/: schema.xml  solrconfig.xml  stopwords.txt
docs/: KEYCLOAK_SETUP_GUIDE.md  OAUTH_GUIDE.md  OAUTH_TROUBLESHOOTING.md
src/: bare_server.py  direct_server.py  fastapi_server.py  main.py  server.py
src/my_project/: main.py
src/server/: http_server.py  mcp_server.py  models.py  oauth.py  solr_client.py
src/solr_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_integration_server.py  test_oauth.py  test_oauth_integration.py  test_server.py
tests/archived/: minimal_server.py  uvicorn_server.py
tests/http/: solr-mcp-requests.http
tests/tools/: check_pip_env.py  http_test_mcp_server.py  test_http_connection.py
